# sgjdt_battle_rust

./: Cargo.toml  README.md
.github/workflows/: rust.yml
cfg/: Design.json  Equipment.json  Monster.json  Soldier.json
my_db/: db  snap.0000000000000318
protos/: base.proto
src/: main.rs
src/common/: cfg.rs
src/handlers/: mod.rs  user.rs
src/model/: battle.rs  hero.rs  mod.rs  player.rs
