[package]
name = "sgjdt_rustlang_battle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6" }
tokio = { version = "1.0", features = ["full"] }
uuid = {version = "1.3", features = ["v4"]}
#fasthash = "0.4"
crc32fast = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
rand = "0.8"
sled = "0.34"
#memcache = "0.17"